--- a/BuscaCEP/BuscaCEP/BuscaCEP.csproj
+++ b/BuscaCEP/BuscaCEP/BuscaCEP.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Correios.NET" Version="1.4.2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
